--- a/index.html
+++ b/index.html
@@ -4,9 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Coming soon .... Le Wagon</h1>
-    <img src="" alt="">
+    <div id="container">
+        <div id="logo">
+            <h1>Coming soon .... Le Wagon</h1>
+            <img src="placehold.it/80x80" alt="">
+         </div>  
+    </div>
 </body>
 </html>
